--- a/FreshFarmMarket/Pages/Error/500.cshtml
+++ b/FreshFarmMarket/Pages/Error/500.cshtml
@@ -39,3 +39,7 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+}
